--- a/module-3/Christman_Mod3_3.html
+++ b/module-3/Christman_Mod3_3.html
@@ -11,31 +11,31 @@
 </head>
 
 <body>
-    <div id=”container”>
+    <div id="container">
         <h1>Assignment 3.3: Build a Web Page Exercise - Part 3</h1>
-        <div id=”left-div”>
-            <h3>Top 10 Favorite Books</h3>
+        <div id="left-div">
             <ol>
-              <li> </li>
-              <li> </li>
-              <li> </li>
-              <li> </li>
-              <li> </li>
-              <li> </li>
-              <li> </li>
-              <li> </li>
-              <li> </li>
-              <li> </li> 
+            <h3>Top 10 Favorite Books</h3>
+              <li>The Return of the King</li>
+              <li>The Two Towers</li>
+              <li>The Fellowship of the Ring</li>
+              <li>The Hobbit</li>
+              <li>The Catcher in the Rye</li>
+              <li>To Kill a Mockingbird</li>
+              <li>The Iliad</li>
+              <li>The Odyssey</li>
+              <li>Brave New World</li>
+              <li>You Don't Know Me</li> 
             </ol>
         </div>
-        <div id=”right-div”>
-            <h3>5 Things I’ve Learned Since the Course Started</h3>
+        <div id="right-div">
             <ul>
-              <li> </li>
-              <li> </li>
-              <li> </li>
-              <li> </li>
-              <li> </li>
+            <h3>5 Things I’ve Learned Since the Course Started</h3>
+              <li>How to Use GitHub Pages</li>
+              <li>The Uses of Visual Cues</li>
+              <li>The Difference of Central vs. Peripheral Vision</li>
+              <li>It’s a Good Thing that People Forget</li>
+              <li>The Most Vivid Memories are Wrong</li>
             </ul>
         </div>
         <div id="last-div">
