--- a/module-3/Christman_Mod3_3.html
+++ b/module-3/Christman_Mod3_3.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
     <title>CSD 340 Web Development with HTML and CSS</title>
-    <meta name="description" content="The Story of my Life: As Told by Sean Christman">
-    <meta name="keywords" content="Story, Introduction, Sean, Christman">
+    <meta name="description" content="Assignment 3.3">
+    <meta name="keywords" content="Assignment, 3.3, Sean, Christman">
     <meta name="author" content="Sean Christman">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Christman_Mod3_3.css">
